--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="page-content home" id="home">
-                <p>Page content goes here</p>
+                <p class="home-p">Page content goes here</p>
                 <a href="/about/">About app</a>
             </div>
         </div>
