--- a/index.html
+++ b/index.html
@@ -11,28 +11,8 @@
 </head>
 <body>
 <div id="app">
-    <div class="statusbar"></div>
-    <div class="view view-main">
-        <div data-name="home" class="page">
-            <div class="navbar">
-                <div class="navbar-inner">
-                    <div class="title">Awesome App</div>
-                </div>
-            </div>
-
-            <div class="toolbar">
-                <div class="toolbar-inner">
-                    <a href="#" class="link">Link 1</a>
-                    <a href="#" class="link">Link 2</a>
-                </div>
-            </div>
-
-            <div class="page-content home" id="home">
-                <p class="home-p">Page content goes here</p>
-                <a href="/about/">About app</a>
-            </div>
-        </div>
-    </div>
+  <div class="statusbar"></div>
+  <div class="view view-main"></div>
 </div>
 </body>
 </html>
