--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -2,7 +2,7 @@
   <div class="navbar">
     <div class="navbar-inner sliding">
       <div class="left">
-        <a href="#" class="link back">
+        <a href="javascript:" class="homeBack link">
           <i class="icon icon-back"></i>
           <span class="ios-only">Back</span>
         </a>
@@ -18,6 +18,8 @@
       <p>Framework7 is not compatible with all platforms. It is focused only on iOS and Android (Material) to bring the best experience and simplicity.</p>
       <p>Framework7 is definitely for you if you decide to build iOS and Android hybrid app (Cordova or PhoneGap) or web app that looks like and feels as great native iOS or Android (Material) apps.</p>
     </div>
-    <a href="/list/">About app</a>
+    <a href="/list">About app</a>
+
+    <a href="/home">About home</a>
   </div>
 </div>
