--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -14,7 +14,7 @@
 
   <div class="page-content home" id="home">
     <p class="home-p">Page content goes here</p>
-    <a href="/about/">About app</a>
+    <a href="/about">About app</a>
 
     <div class="homeList"></div>
   </div>
